--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import BooksContainer from "../components/BooksContainer.astro";
+import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Books list">
+  <Header />
   <main class="w-[1120px] mx-auto">
     <h1 class="text-5xl uppercase text-white">Lista de libros</h1>
 
