ADD: Save at localstorage + use of nanostores for share state

--- a/src/components/BookItem.astro
+++ b/src/components/BookItem.astro
@@ -19,4 +19,4 @@ const { title, cover, ISBN } = Astro.props;
   />
 </a>
 
-<AddToList client:visible cover={cover} title={title} ISBN={ISBN} />
+<AddToList client:only cover={cover} title={title} ISBN={ISBN} />
