--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import QuantityBooksInList from "./QuantityBooksInList.astro";
+import BooksQuantity from "./BooksQuantity";
 ---
 
 <header class="w-[1120px] mx-auto flex justify-end py-4">
-  <QuantityBooksInList />
+  <BooksQuantity client:only />
 </header>
