ADD: Favourite book list

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import BooksQuantity from "./BooksQuantity";
+import Drawer from "./Drawer";
 ---
 
 <header class="w-[1120px] mx-auto flex justify-end py-4">
-  <BooksQuantity client:only />
+  <Drawer client:only />
 </header>
