--- a/src/components/BooksContainer.astro
+++ b/src/components/BooksContainer.astro
@@ -1,5 +1,5 @@
 ---
-import BookItem from "./BookItem.astro";
+import BookItem from "./BookItem.tsx";
 import books from "../data/books.json";
 export interface Books {
   title: string;
@@ -23,9 +23,10 @@ export interface Author {
     books.library.map(({ book: { title, cover, ISBN } }): Books => {
       return (
         <li class="relative">
-          <BookItem title={title} cover={cover} ISBN={ISBN} />
+          <BookItem client:only title={title} cover={cover} ISBN={ISBN} />
         </li>
       );
     })
   }
 </ul>
+./BookItem.tsx
